@@ -13,6 +13,10 @@
 
 	* src/core/exmpp_internals.erl: Add gen_getopts/2.
 
+	* src/core/exmpp_compress.erl: Remove the 'Length' argument to the
+	recv functions. Add recv_data/2. Add getopts/2. Multiple fixes to the
+	documentation.
+
 2008-06-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	With these changes, ejabberd 2.0.x can run without modifications with
